// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiple spreads 1`] = `
<div
  class="zux foo hux"
  data-bar=""
  data-foo=""
  style="z-index: 10; --color: red; --bgColor: red;"
/>
`;

exports[`multiple spreads 2`] = `
<div
  class="zux foo hux"
  data-bar=""
  data-foo=""
  style="z-index: 10; --color: red; --bgColor: orange;"
/>
`;

exports[`one spread 1`] = `
<div
  class="boo foo"
  data-foo=""
  style="--color: blue;"
/>
`;
